--- a/masculino.html
+++ b/masculino.html
@@ -53,7 +53,9 @@
         </div>
         <div class="tlc">
             <span class="tl">
-                Loja Adriana
+                <a href="C:\Users\Aysllan\Documents\web\index.html">
+                    Loja Adriana
+                </a>
             </span>
         </div>
         <div class="tld">
@@ -83,11 +85,9 @@
             </span>
         </div>
         <div class="btmn">
-            <a href="C:\Users\Aysllan\Documents\web\masculino.html">
-                <span class="btspmn">
-                    Masculino
-                </span>
-            </a>
+            <span class="btspmn">
+                Masculino
+            </span>
         </div>
         <div class="btmn">
             <span class="btspmn" onclick="btn_menu()">
@@ -105,11 +105,6 @@
             </span>
         </div>
 
-    </div>
-    <div class="slider">
-        
-        <img src="img/banner.png" alt="banner principal" width="100%" height="100%">
-        
     </div>
 </body">
 
