add as demais paginas

--- a/basico.html
+++ b/basico.html
@@ -90,13 +90,15 @@
         </div>
         <div class="btmn">
             <span class="btspmn">
-                Masculino
+                <a href="C:\Users\Aysllan\Documents\web\masculino.html">
+                    Masculino
+                </a>
             </span>
         </div>
         <div class="btmn">
             <span class="btspmn">
                 <a href="C:\Users\Aysllan\Documents\web\kids.html">
-                    Kids
+                Kids
                 </a>
             </span>
         </div>
@@ -109,25 +111,9 @@
         </div>
         <div class="btmn">
             <span class="btspmn">
-                <a href="C:\Users\Aysllan\Documents\web\basico.html">
                 Básico
-                </a>
             </span>
         </div>
-
-    </div>
-    <div class="q-produto">
-        <article class="q-m-produto">
-
-            <div class="f-m-produto">
-                <img src="img/masculino/1.jpg" alt="foto">
-
-            </div>
-            <div>
-
-            </div>
-
-        </article>
 
     </div>
 </body">
