--- a/index.html
+++ b/index.html
@@ -73,35 +73,45 @@
     </div>
     <div class="menu">
         <div class="btmn">
-            <span class="btspmn" onclick="btn_menu()">
-                Novidades
+            <span class="btspmn">
+                <a href="C:\Users\Aysllan\Documents\web\novidades.html">
+                    Novidades
+                </a>
             </span>
         </div>
         <div class="btmn">
-            <span class="btspmn" onclick="btn_menu()">
-                Feminino
+            <span class="btspmn">
+                <a href="C:\Users\Aysllan\Documents\web\feminino.html">
+                    Feminino
+                </a>
             </span>
         </div>
         <div class="btmn">
-            <a href="C:\Users\Aysllan\Documents\web\masculino.html">
                 <span class="btspmn">
-                    Masculino
+                    <a href="C:\Users\Aysllan\Documents\web\masculino.html">
+                        Masculino
+                    </a>
                 </span>
-            </a>
         </div>
         <div class="btmn">
-            <span class="btspmn" onclick="btn_menu()">
-                Kids
+            <span class="btspmn">
+                <a href="C:\Users\Aysllan\Documents\web\kids.html">
+                    Kids
+                </a>
             </span>
         </div>
         <div class="btmn">
-            <span class="btspmn" onclick="btn_menu()">
-                Plus size
+            <span class="btspmn">
+                <a href="C:\Users\Aysllan\Documents\web\plussize.html">
+                    Plus size
+                </a>
             </span>
         </div>
         <div class="btmn">
-            <span class="btspmn" onclick="btn_menu()">
-                Básico
+            <span class="btspmn">
+                <a href="C:\Users\Aysllan\Documents\web\basico.html">
+                    Básico
+                </a>
             </span>
         </div>
 
