--- a/novidades.html
+++ b/novidades.html
@@ -76,9 +76,7 @@
     <div class="menu">
         <div class="btmn">
             <span class="btspmn">
-                <a href="C:\Users\Aysllan\Documents\web\novidades.html">
                 Novidades
-                </a>
             </span>
         </div>
         <div class="btmn">
@@ -90,7 +88,9 @@
         </div>
         <div class="btmn">
             <span class="btspmn">
-                Masculino
+                <a href="file:///C:/Users/Aysllan/Documents/web/masculino.html">
+                    Masculino
+                </a>
             </span>
         </div>
         <div class="btmn">
@@ -114,20 +114,6 @@
                 </a>
             </span>
         </div>
-
-    </div>
-    <div class="q-produto">
-        <article class="q-m-produto">
-
-            <div class="f-m-produto">
-                <img src="img/masculino/1.jpg" alt="foto">
-
-            </div>
-            <div>
-
-            </div>
-
-        </article>
 
     </div>
 </body">
