--- a/kids.html
+++ b/kids.html
@@ -90,14 +90,14 @@
         </div>
         <div class="btmn">
             <span class="btspmn">
-                Masculino
+                <a href="C:\Users\Aysllan\Documents\web\masculino.html">
+                    Masculino
+                </a>
             </span>
         </div>
         <div class="btmn">
             <span class="btspmn">
-                <a href="C:\Users\Aysllan\Documents\web\kids.html">
-                    Kids
-                </a>
+                Kids
             </span>
         </div>
         <div class="btmn">
@@ -110,24 +110,10 @@
         <div class="btmn">
             <span class="btspmn">
                 <a href="C:\Users\Aysllan\Documents\web\basico.html">
-                Básico
+                    Básico
                 </a>
             </span>
         </div>
-
-    </div>
-    <div class="q-produto">
-        <article class="q-m-produto">
-
-            <div class="f-m-produto">
-                <img src="img/masculino/1.jpg" alt="foto">
-
-            </div>
-            <div>
-
-            </div>
-
-        </article>
 
     </div>
 </body">
