--- a/masculino.html
+++ b/masculino.html
@@ -123,7 +123,48 @@
                 <img src="img/masculino/1.jpg" alt="foto">
 
             </div>
-            <div>
+            <div class="idcs">
+
+                <h2 class="idc">Camisa gola polo básica</h2>
+
+            </div>
+
+        </article>
+        <article class="q-m-produto">
+
+            <div class="f-m-produto">
+                <img src="img/masculino/2.jpg" alt="foto">
+
+            </div>
+            <div class="idcs">
+
+                <h2 class="idc">Camisa básica de malha</h2>
+
+            </div>
+
+        </article>
+        <article class="q-m-produto">
+
+            <div class="f-m-produto">
+                <img src="img/masculino/3.jpg" alt="foto">
+
+            </div>
+            <div class="idcs">
+
+                <h2 class="idc">Camisa básica de malha</h2>
+
+            </div>
+
+        </article>
+        <article class="q-m-produto">
+
+            <div class="f-m-produto">
+                <img src="img/masculino/4.jpg" alt="foto">
+
+            </div>
+            <div class="idcs">
+
+                <h2 class="idc">Camisa básica de malha</h2>
 
             </div>
 
