tentando padronizar fotos

--- a/masculino.html
+++ b/masculino.html
@@ -120,7 +120,7 @@
         <article class="q-m-produto">
 
             <div class="f-m-produto">
-                <img src="img/masculino/1.jpg" alt="foto">
+                <img src="img/masculino/1.jpg" alt="foto" class="foto-p">
 
             </div>
             <div class="idcs">
@@ -133,7 +133,7 @@
         <article class="q-m-produto">
 
             <div class="f-m-produto">
-                <img src="img/masculino/2.jpg" alt="foto">
+                <img src="img/masculino/2.jpg" alt="foto" class="foto-p">
 
             </div>
             <div class="idcs">
@@ -146,7 +146,7 @@
         <article class="q-m-produto">
 
             <div class="f-m-produto">
-                <img src="img/masculino/3.jpg" alt="foto">
+                <img src="img/masculino/3.jpg" alt="foto" class="foto-p">
 
             </div>
             <div class="idcs">
@@ -159,7 +159,7 @@
         <article class="q-m-produto">
 
             <div class="f-m-produto">
-                <img src="img/masculino/4.jpg" alt="foto">
+                <img src="img/masculino/4.jpg" alt="foto" class="foto-p">
 
             </div>
             <div class="idcs">
